<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="product"
            type="com.conestoga.groupproject.data.entities.Product" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/md_theme_light_surfaceVariant"
        android:layout_height="match_parent"
        tools:context=".view.checkout.ProductDetail">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/md_theme_light_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            app:imageUrl="@{product.image}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/md_theme_light_background"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="16dp"
            android:paddingHorizontal="8dp"
            android:text="@{product.model}"
            android:textColor="@color/md_theme_light_onSurfaceVariant"
            app:layout_constraintTop_toBottomOf="@id/ivProduct"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_description"
            android:paddingHorizontal="8dp"
            android:paddingTop="16dp"
            android:text="@{product.description}"
            android:textColor="@color/md_theme_light_onSurfaceVariant"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_price"
            android:textAlignment="center"
            android:paddingHorizontal="8dp"
            android:paddingTop="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            app:price="@{product.price}"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnBuyNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_now"
            android:paddingHorizontal="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
