<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="product"
            type="com.conestoga.groupproject.data.entities.Product" />

        <variable
            name="quantity"
            type="int" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.checkout.CheckoutActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.checkout.CheckoutActivity">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_lbl"
                android:textStyle="bold"
                android:paddingHorizontal="16dp"
                android:textColor="@color/md_theme_light_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_toolbar"
                android:textSize="24sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewCheckout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:borderWidth="0.5dp"
                app:strokeColor="@color/md_theme_light_surfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCheckout">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvProductName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@{product.model}"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/tvProductPrice"
                        app:layout_constraintEnd_toStartOf="@id/ivProductImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Product A" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvProductPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:price="@{product.price}"
                        app:layout_constraintBottom_toTopOf="@id/llQuantity"
                        app:layout_constraintEnd_toStartOf="@id/ivProductImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvProductName"
                        tools:text="$ 10.0"/>

                    <LinearLayout
                        android:id="@+id/llQuantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/ivProductImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvProductPrice">

                        <ImageView
                            android:id="@+id/ivMinus"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/minus_solid" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvQuantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            app:quantity="@{quantity}"
                            tools:text="1"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <ImageView
                            android:id="@+id/ivPlus"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/plus_solid" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivProductImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{product.image}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/viewA"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/cardViewCheckout"
                android:layout_marginVertical="10dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvShipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_lbl"
                android:paddingHorizontal="16dp"
                android:textStyle="bold"
                android:backgroundTint="@color/md_theme_light_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewA"
                android:textSize="18sp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewShipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardCornerRadius="10dp"
                android:paddingHorizontal="16dp"
                app:strokeColor="@color/md_theme_light_background"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvShipping">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/address_hint"
                        android:inputType="text"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/city_hint"
                        android:inputType="text"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etAddress" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/state_hint"
                        android:inputType="text"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etCity" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etZip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/zip_hint"
                        android:inputType="text"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etState" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <View
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/cardViewShipping"
                android:layout_marginVertical="10dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_lbl"
                android:textStyle="bold"
                android:paddingHorizontal="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewB"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/md_theme_light_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPayment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/card_number_hint"
                        android:inputType="number"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/card_name_hint"
                        android:inputType="text"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etCardNumber" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/card_exp_hint"
                        android:inputType="text"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etCardName" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardCvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/card_cvv_hint"
                        android:inputType="number"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etCardExp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_order_btn"
                android:paddingHorizontal="8dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/cardViewPayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>


