<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="user"
            type="com.google.firebase.auth.FirebaseUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".view.MainActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ivAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:gravity="center"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            app:nameToInitials="@{user.email}"
            android:textSize="24sp"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="OS" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@{user.displayName}"
            android:textColor="@color/md_theme_light_onBackground"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="@id/ivAvatar"
            tools:text="@string/home_nav_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:text="@{user.email}"
            android:textColor="@color/md_theme_light_onBackground"
            app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            tools:text="@string/home_nav_subtitle" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/products_lbl"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <ImageView
            android:id="@+id/ivBell"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@null"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            android:src="@drawable/bell_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProducts"
            tools:itemCount="10"
            tools:listitem="@layout/product_card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
